--- a/posts/2025-06-03.md
+++ b/posts/2025-06-03.md
@@ -1549,6 +1549,444 @@ That would be wrong, it turns out, but there is a general way to transform queri
 It turns out that magic sets are not the optimal answer, [several](http://logic.stanford.edu/logicprogramming/readings/tekle.pdf) [papers](http://logicprogramming.stanford.edu/readings/ullman.pdf) explain how they could be more efficient.
 I'll be reading them looking for the *simplest* way to do things, but in the future.
 
+## Planning and Optimizing
+
+Let's write a very simple, and really quite bad, join optimizer!
+
+### Wait, wait! 
+
+I need to get something out of my system about the motivation for all of this.
+And by "all of this" I mean [Datalog](https://en.wikipedia.org/wiki/Datalog).
+Why all the work for what seems like an esotoric logic programming languages?
+Are you truly excited about programs built out of Horn clauses, their minimal Herbrand models, and extensions to non-monotonic logics? 
+No?
+
+Me neither.
+Sorry not sorry.
+
+I find Datalog fascinating because it is for me the purest form of the main problem in data-parallel computation: data rendezvous.
+Essentially all of data-parallel computation reduces down to "I have subproblems that are easy enough to solve once I have brought the right data in the same place".
+
+
+When you write a rule like
+```
+h(x, y, z) :- b1(x, y), b2(y, z) .
+```
+What you are saying, to me at least, is:
+
+> For each `y`, I need to bring together its `x` and `z` for some reason.
+
+I don't know what your reason is, but this is 100% the sort of thing you do over and over and over in data-parallel computations.
+Yes of course if you want to pair up a customer's orders and account status you'll need a join like this, but it goes so much further.
+If you want to compute a PageRank step you'll need to bring together the ranks `x` of pages `y` with pages `z` they reference (and not shown: the out-degree of each page `y`).
+If you want to find friends `x` of yours `y` who might know a work acquaintance `z`, the first step is to collect your list of friends and coworkers.
+
+The primitive operation in data-parallel computation is to group records by some key, and present the grouped list up to user logic (the `reduce` in [MapReduce](https://en.wikipedia.org/wiki/MapReduce#:~:text=MapReduce%20is%20a%20framework%20for,shared%20across%20geographically%20and%20administratively)).
+Joins are the first way you can say "ok, ok, but not *everything*".
+They let you selectively route information to its ultimate destination `h(x, y, z)`, whatever that is about.
+
+### A data-parallel IR
+
+Let's write a dead simple intermediate representation (IR) for data-parallel computation.
+It's going to be too simple, but .. already more expressive than most systems out there.
+It's specialized to joins at the moment, but we'll generalize it soon enough.
+
+There are three opcodes in this IR
+```rust
+pub enum Op {
+    /// A collection of data by name.
+    Var(String),
+    /// Applies an action to each tuple.
+    /// The action can filter, permute, and project tuples.
+    Map(Action),
+    /// Brands the first so-many columns as keys.
+    Key(usize),
+    /// Brings together multiple collections with the same key length.
+    /// For each key, produces the Cartesian product (cross join).
+    Mul(usize),
+}
+```
+
+I know I said three opcodes, and there are clearly four in that list.
+We'll end up fusing `Map` and `Key` into one operator, to make our lives easier.
+As it turns out it is really powerful to allow the sharing and reuse of the outputs of `Key` and `Mul` expressions, but nothing great happens from reusing `Map` expressions.
+
+The `Action` type could do a great many things, but for the moment we'll have it do something roughly like our `Plan` from way up above:
+```rust
+/// Filters rows, re-orders columns, and groups by a prefix.
+pub struct Action {
+    /// Columns that must equal some literal.
+    lit_filter: Vec<(usize, String)>,
+    /// Lists of columns that must all be equal.
+    var_filter: Vec<Vec<usize>>,
+    /// The order of input columns presented as output.
+    projection: Vec<usize>,
+    /// The prefix length by which the rows are grouped.
+    key_arity: usize,
+}
+```
+
+With this type, and in particular the `key_arity` field, we can just drop the `Key` variant above.
+
+This IR is already able to express any of the right-to-left join plans we have produced so far.
+Each binary join is implemented by keying its inputs by the columns being equated, and then passing any next actions on to the join output in as the `action` argument to our `join` function.
+
+At the same time, the IR can also represent things much smarter, and also much less smart.
+Let's start with less smart, and build up to smarter.
+
+### Something much less smart
+
+Let's parse an arbitrary rule into a program in our opcodes!
+
+I'm not sure how much less smart you were thinking, but I'm thinking we just cross-join all of the atoms in the body, and for each head put a filter and projection atop the cross product.
+Nothing wrong with `Map` using a key arity of zero, and `Mul` applying to any number of these.
+Nothing wrong other than performance, of course.
+We'll get there.
+
+```rust
+/// Converts a multi-head rule into assembly instructions.
+pub fn rule_to_ir(rule: &Rule) -> Vec<ENode<Op>> {
+
+    let mut head = Action::default();
+
+    // Columns introduced with the same names (equality constraints).
+    let mut bind = BTreeMap::<&str, Vec<usize>>::default();
+    let mut prog = vec![Op::Mul(rule.body.len())];
+
+    // Each atom is introduced with a no-op action.
+    // Head rules will introduce filters and projections.
+    for atom in rule.body.iter() {
+        prog.extend([
+            Op::nop(atom.terms.len()),
+            Op::Var(atom.name.clone()),
+        ]);
+        for term in atom.terms.iter() {
+            let column = head.projection.len();
+            head.projection.push(column);
+            match term {
+                // Variable terms record the name used.
+                Term::Var(name) => { 
+                    bind.entry(name)
+                        .or_default()
+                        .push(column); 
+                },
+                // Literal terms record the filter.
+                Term::Lit(data) => { 
+                    head.lit_filter
+                        .push((column, data.to_string())); 
+                },
+            }
+        }
+    }
+    // Add the equated columns as a filter constraint.
+    // Retain `bind` to support name resolution for heads.
+    head.var_filter
+        .extend(bind.values()
+                    .filter(|l| l.len() > 1)
+                    .map(|l| l.clone()));
+
+    unimplemented!("Head atoms next!")
+}
+```
+
+This puts together a list of `Op` instructions that I claim will perform the work we need.
+We are using [Polish notation](https://en.wikipedia.org/wiki/Polish_notation), aka "prefix notation", where something like
+```rust
+vec![
+    Op::Mul(2), 
+    Op::nop(3), 
+    Op::Var("potato"),
+    Op::nop(1),
+    Op::Var("salad"),
+];
+```
+Says to perform a binary (`2`) join between the keyless three columns of `potato` and the keyless single colunm of `salad`.
+That `Op::nop` function takes a number of columns, and does nothing to the data but project those columns out (key arity of zero).
+
+We have the body of the rule ready to go.
+If we wanted to see everything, we'd just put `Op::Map(head)` at the front of our list of commands.
+Instead, we have a bunch of different head atoms we'll want to tailor `head` to support.
+```rust
+    // Each head atom should personalize `act` and apply it to `join`.
+    // The personalization projects out only the distinct names.
+    let heads = rule.head.iter().map(|atom| {
+        let mut head_names = BTreeSet::<&str>::default();
+        let mut head = head.clone();
+        head.projection.clear();
+        for term in atom.terms.iter() {
+            // Ignore literals in head atoms.
+            if let Term::Var(name) = term {
+                if head_names.insert(name) {
+                    // Use the first equivalent column.
+                    let col = bind.get(name.as_str()).unwrap()[0];
+                    head.projection.push(col);
+                }
+            }
+        }
+        head
+    }).collect::<Vec<_>>();
+```
+
+The list `heads` now contains an `Action` for each head atom, and if that action is used in an `Op::Map` and applied to `prog` we'll compute the right result.
+Again, incredibly inefficiently with lots of cross joining.
+But it should be the right result.
+Just oh so very slowly.
+
+### Optimizing our IR
+
+I hope you like [e-graphs](https://en.wikipedia.org/wiki/E-graph).
+I sure do.
+
+If you don't know about e-graphs you might want to check out the [egg webpage](https://egraphs-good.github.io).
+I've also [written a post about e-graphs](https://github.com/frankmcsherry/blog/blob/master/posts/2024-10-19.md), which describes the code we are about to use next.
+I've written up an e-graph implementation, borrowing poorly from the [`egg`](https://crates.io/crates/egg) project, which you should use if you'd like professional e-graphs.
+I was hoping to learn by doing, so I did some doing.
+Learning then ensued.
+
+The first step to learning about e-graphs is to learn about [term graphs](https://en.wikipedia.org/wiki/Term_graph).
+A term graph can be seen as a map from identifiers `Id` to operations that only reference identifiers.
+```rust
+struct ENode<T> {
+    op: T,
+    args: Vec<Id>,
+}
+
+type TermGraph<T> = BTreeMap<Id, ENode<T>>;
+```
+This is a way to represent an expression tree, where each tree node has its own `Id`.
+A term graph allows you to go further and express sharing: if two `ENode` instances are identical, same operator and same arguments, then you can use the same identifier for both.
+This sharing allows programs to be more concise, but also to reveal which data can be reused.
+
+It may seem like there's not likely a lot of helpful sharing to pull out of our current plans, but that's only because you don't know what we are about to do next.
+We are going to make a *LOT* of new e-nodes.
+Before we get there, let's introduce the expressions we already have, from `prog` (the body) and `heads`.
+
+```rust
+    // Houses our options for the rule implementation.
+    let mut e_graph: EGraph<Op> = Default::default();
+
+    // Insert and capture a name for `join`.
+    let body = e_graph.insert(prog.clone());
+    // Insert but ignore each head atom.
+    for head in heads.iter() {
+        e_graph.ensure(ENode::new(Op::Map(head.clone()), [body]));
+    }
+```
+
+The `e_graph.insert` method omnomnoms the supplied sequence of operators and rebuilds them as e-nodes internally.
+It returns the name associated with the root of the program, in our case the `Op::Mul` instruction.
+The `e_graph.ensure` method is similar, but it works with a raw e-node: you specify the operator and the list of argument identifiers.
+We could copy our `head` action atop many copies of `prog`, but that's just extra work.
+
+---
+
+Let's introduce the reference example I've been using, which tracks the "clever" observation from the implementation section above.
+```
+head(?a, ?b) :- a(?x, ?a), b(?y, ?x), b(?y, ?z), a(?z, ?b) .
+```
+This rule walks backwards through `a` then `b`, then forwards through `b` then `a`.
+In term graph representation, this looks like:
+```
+0 -> [ Var("a") ]
+1 -> [ Map(Action { proj: [0, 1], arity: 0 })[0] ]
+2 -> [ Var("b") ]
+3 -> [ Map(Action { proj: [0, 1], arity: 0 })[2] ]
+4 -> [ Mul(4)[1, 3, 3, 1] ]
+5 -> [ Map(Action { var_filter: [[0, 3], [2, 4], [5, 6]], proj: [1, 7], arity: 0 })[4] ]
+```
+We've cleverly noticed that although we use `a` and `b` twice, because we do nothing to them yet (identity projection and no key), it's super easy to re-use them.
+We'll still be murdered by the `Mul(4)` cross join, but the program is more concise now.
+
+
+### Equality Saturation
+
+Time to optimize the e-graph!
+But optimize how?
+We just have our list of instructions.
+
+```rust
+    // Time to optimize the e-graph!
+    e_iterate(&mut e_graph, &[
+        &MulPermute, 
+        &MulPartition,
+        &MapPushdown,
+    ]);
+```
+
+Not very clear what happened here.
+
+The tl;dr is that each of `MulPermute`, `MulPartition`, and `MapPushdown` are rules that are able to introduce new e-nodes, and equate them to other e-nodes.
+For example, `MulPermute` says that you can equate 
+```
+    [ Map1, Mul(k), A, B, .. Z ]
+=   
+    [ Map2, Mul(k), B, Z, .. Q ]
+```
+as long as `Map1` and `Map2` are the same other than the appropriate column permutation.
+There are a lot of permutations, and .. so lots of equivalent e-nodes.
+Syntactically distinct e-nodes, so we'll write them all down, and then call them equal.
+
+How do e-graphs "call things equal"?
+Rather than map from `Id` to one `ENode<T>`, they'll map to a list `Vec<ENode<T>>`.
+Each of the e-nodes in the list are equivalent, and any could be used in place of the other.
+
+Our three e-graph rules will respectively do:
+1. `MulPermute` : equate all permutations of inputs for `Mul(k)`.
+2. `MulPartition` : equate all ways you can break `Mul(k)` into 
+3. `MapPushdown` : equate a `Map` atop a `Mul(2)` with a `Mul` atop a `Map` that keys equated columns across the inputs, and has input-local filters and projections.
+
+The code for these is a bit gnarly, and honestly I'm hoping not to use it for very long.
+It doesn't take an advanced degree to grok that a `Mul(k)` can produce at least `2^k * k!` equivalent terms, just from the permutation and partitioning.
+
+---
+
+If we run the `MulPermute` rule only, repeatedly until we stop introducing new information, we end up with not all that many e-nodes
+```
+0:  -> [ Var("a") ]
+1:  -> [ Map(Action { proj: [0, 1], arity: 0 })[0] ]
+2:  -> [ Var("b") ]
+3:  -> [ Map(Action { proj: [0, 1], arity: 0 })[2] ]
+4:  -> [ Mul(4)[1, 3, 3, 1] ]
+6:  -> [ Mul(4)[1, 3, 1, 3] ]
+10: -> [ Mul(4)[1, 1, 3, 3] ]
+13: -> [ Mul(4)[3, 1, 3, 1] ]
+15: -> [ Mul(4)[3, 1, 1, 3] ]
+17: -> [ Mul(4)[3, 3, 1, 1] ]
+```
+Those are the only distinct ways to use two copies of `a` and two copies of `b`.
+Admittedly, I concealed the e-class for the head.
+That's the one with all the equivalent expressions, so what does it look like?
+```
+EClass #5:  -> [ 
+    Map(Action { var_filter: [[0, 3], [2, 4], [5, 6]], proj: [1, 7], arity: 0 })[4],
+    Map(Action { var_filter: [[0, 3], [2, 6], [4, 7]], proj: [1, 5], arity: 0 })[6],
+    Map(Action { var_filter: [[0, 5], [2, 4], [3, 6]], proj: [1, 7], arity: 0 })[4],
+    Map(Action { var_filter: [[0, 5], [4, 6], [2, 7]], proj: [1, 3], arity: 0 })[10],
+    Map(Action { var_filter: [[0, 7], [2, 6], [3, 4]], proj: [1, 5], arity: 0 })[6],
+    Map(Action { var_filter: [[0, 7], [4, 6], [2, 5]], proj: [1, 3], arity: 0 })[10],
+    Map(Action { var_filter: [[1, 2], [0, 4], [5, 6]], proj: [3, 7], arity: 0 })[13],
+    Map(Action { var_filter: [[1, 2], [0, 6], [4, 7]], proj: [3, 5], arity: 0 })[15],
+    Map(Action { var_filter: [[1, 4], [0, 2], [3, 6]], proj: [5, 7], arity: 0 })[17],
+    Map(Action { var_filter: [[1, 4], [0, 6], [2, 7]], proj: [5, 3], arity: 0 })[15],
+    Map(Action { var_filter: [[1, 6], [0, 2], [3, 4]], proj: [7, 5], arity: 0 })[17],
+    Map(Action { var_filter: [[1, 6], [0, 4], [2, 5]], proj: [7, 3], arity: 0 })[13],
+    Map(Action { var_filter: [[2, 5], [0, 4], [1, 6]], proj: [3, 7], arity: 0 })[13],
+    Map(Action { var_filter: [[2, 5], [4, 6], [0, 7]], proj: [3, 1], arity: 0 })[10],
+    Map(Action { var_filter: [[2, 7], [0, 6], [1, 4]], proj: [3, 5], arity: 0 })[15],
+    Map(Action { var_filter: [[2, 7], [4, 6], [0, 5]], proj: [3, 1], arity: 0 })[10],
+    Map(Action { var_filter: [[3, 4], [0, 2], [1, 6]], proj: [5, 7], arity: 0 })[17],
+    Map(Action { var_filter: [[3, 4], [2, 6], [0, 7]], proj: [5, 1], arity: 0 })[6],
+    Map(Action { var_filter: [[3, 6], [0, 2], [1, 4]], proj: [7, 5], arity: 0 })[17],
+    Map(Action { var_filter: [[3, 6], [2, 4], [0, 5]], proj: [7, 1], arity: 0 })[4],
+    Map(Action { var_filter: [[4, 7], [0, 6], [1, 2]], proj: [5, 3], arity: 0 })[15],
+    Map(Action { var_filter: [[4, 7], [2, 6], [0, 3]], proj: [5, 1], arity: 0 })[6],
+    Map(Action { var_filter: [[5, 6], [0, 4], [1, 2]], proj: [7, 3], arity: 0 })[13],
+    Map(Action { var_filter: [[5, 6], [2, 4], [0, 3]], proj: [7, 1], arity: 0 })[4],
+]
+```
+
+Haha.
+Ok.
+I got you.
+
+For each `Mul(4)` above there are 2 x 2 `Map` here, corresponding to the two ways you could choose the `a` and `b` inputs.
+We could write a smarter `MulPermute` that notices when the argument `Id` are equivalent and avoids the redundancy.
+But strictly speaking we haven't taught our e-graph that these terms are all equivalent.
+Perhaps the hash of `var_filter` is very important, for some reason.
+We are pretty sure that isn't the case, but still.
+
+The next rule, `MulPartition`, takes the number of distinct identifiers up to 43, and doublesn the number of equivalent head expressions up to 48.
+Everything else is pretty tidy though.
+There just aren't that many distinct subterms you can form.
+Enough that I don't want to copy/paste them here, but small enuogh that a computer does a fine job with them.
+
+The last rule, `MapPushdown`, allows filters and projections to move across `Mul` operators, descending into their children where they can introduce a non-zero `key_arity`.
+There are now 114 distinct identifiers.
+There are for some reason 68 equivalent e-nodes corresponding to the root of the query.
+Several of them look like this, though
+```
+Map(Action { proj: [1, 3], arity: 0 })[239],
+```
+That is, they are simply a projection applied to some `Mul` term we can't see here.
+The numbers are not densely packed; they seem to go as high as 890 in this case.
+
+So how do we find a plan that we like?
+Are any of them good?
+
+### Eggstraction
+
+After saturating an e-graph with equivalences, the next step is "extraction".
+
+This is where we take a peek at the e-graph and assign costs to each identifier.
+This is where we get to express our opinions about what is good and what is bad.
+For example, we should make sure that a four-way cross-join is bad.
+
+We'll use a naive heuristic that costs each relation by its number of uncorrelated columns.
+For a `Map` this is the number of columns it produces.
+For a `Mul` this is the number of key columns, plus the sum of non-key columns across all inputs (the additional key columns are equated to the first, and needn't really be there).
+For a `Var` we just use zero because we have to use it and don't know how many columns it has.
+If an e-node has a higher cost than another it is frighteningly worse, and we won't use it.
+
+For a set of identifiers we'll use the maximum cost among them.
+If there are ties in this cost metric, and there will be, we'll break them by minimizing the number of `Map` operators, then `Mul` operators.
+The `Map` operators need to write their data down, whereas the `Mul` operators just need to visit the data and do some compute.
+
+There is some nuance here.
+It turns out there are a lot of distinct sets of identifiers we could use to activate the equivalent e-nodes of any one identifier.
+This input is small enough that you can just enumerate them all, though I took some care to suppress sets of identifiers that are strictly worse (a superset of) some other option.
+You could be smarter and proceed in waves from 0 upward, simply rejecting all e-nodes with a cost greater than the current wave.
+Once you establish *viability* at some cost, you could thin the options down to those, and do the more expensive thing.
+
+The last thing to do, having done all of this mostly correct, I imagine, is find the specific sequence of operations to perform.
+More concretely, we'll return a sequence of `ENode<Op>` renumbered to use identifiers from zero onward referencing their list position.
+Let's see what happens on our reference input.
+```
+> head(?a, ?b) :- a(?x, ?a), b(?y, ?x), b(?y, ?z), a(?z, ?b) .
+
+EPlan:
+step 0: ENode { op: Var("a"), args: [] }
+step 1: ENode { op: Var("b"), args: [] }
+step 2: ENode { op: Map(Action { proj: [0, 1], arity: 1 }), args: [0] }
+step 3: ENode { op: Map(Action { proj: [1, 0], arity: 1 }), args: [1] }
+step 4: ENode { op: Mul(2), args: [3, 2] }
+step 5: ENode { op: Map(Action { proj: [1, 3], arity: 1 }), args: [4] }
+step 6: ENode { op: Mul(2), args: [5, 5] }
+step 7: ENode { op: Map(Action { proj: [1, 3], arity: 0 }), args: [6] }
+40.2635ms
+
+> 
+```
+This gets found in wave two, at most two uncorrelated columns in any operator, and has four `Map` operators.
+Two of these are for the input and one of them is for the output.
+There is just one additional intermediate collection we form, corresponding to the `b(?y, ?z), a(?z, ?b)` fragment.
+
+You might also notice that 40ms is not insubstantial for a release build.
+
+### What's next
+
+I haven't done those clever things I mentioned that might speed things up.
+The time is almost entirely in the equivalence saturation, where a great deal of self-inflicted uncleverness occurs.
+
+But there is also substantially less naive equivalences to produce.
+For example, a fused `MulPermute` and `MulPartition` could realize that it's only worth partitioning the input into parts where each part is still connected by variable equivalences.
+If you partition any other way you'll have a cross join, and while that's sometimes unavoidable, it usually means something is wonky about your query.
+
+One important next step is that all of the above has been for a single rule.
+We have many rules, and when the same term occurs in multiple heads it is the *union* of the inputs, which suggests an `Op::Sum` opcode that might learn about distributivity.
+It's also a bit awkward in that we can interactively update rules, so a term that may look like another term now may become unequal if we add a new rule to target it.
+We'll need to not accidentally equate terms with their definitions, as appealing as that would be.
+
+For the moment, my plan is to hook up the outputs of this optimization and use it.
+If it sucks, I'll have to figure out why and fix it.
+Using things is a great forcing function to make them better.
+
+But actually, the thing I'd like to do most is get away from binary joins as our plans.
+As fundamental as they are to data-parallel computation, we can all see the worst-case optimal train coming down the tunnel at us.
+There are fundamentally better ways to bring relevant data together, the atoms of which will still look like `Map` and `Mul`, but we'll need to generalize them first.
+
+Did I mention that equivalence saturation and extraction are nearly Datalog programs?
+They fit the data-parallel paradigm, and are mostly about rendezvousing the right data.
+
 ## Spilling facts to disk
 
 ## Scaling rule evaluation out
