--- a/posts/2025-06-03.md
+++ b/posts/2025-06-03.md
@@ -1987,14 +1987,238 @@ There are fundamentally better ways to bring relevant data together, the atoms o
 Did I mention that equivalence saturation and extraction are nearly Datalog programs?
 They fit the data-parallel paradigm, and are mostly about rendezvousing the right data.
 
+### Update 29-06-2025
+
+I implemented the execution of the optimized plans.
+It took more work than I expected.
+
+We last we met, our planning emerged with a `Vec<ENode<Op>>`, with the instructions to apply these operations in this sequence, and use the ordinal positions of each e-node to identify it.
+This is all well and good, but we don't actually want to execute each node in isolation.
+
+We have a mix of `Var`, `Map`, and `Mul` operators, and our actual execution intent is
+1. For each `Var`, for each `Map` that depends on it, in one scan through the external collection apply each of the maps.
+2. For each `Mul`, for each `Map` that depends on it, in one scan through the several inputs, perform the join and apply each of the maps.
+
+This means that `Op::Map(action)` specifically isn't an operation we "perform", as much as queue up for the operation on which it depends.
+We'll need to do more prep work to put together an actionable execution plan.
+
+To make our lives easier, I've started to use an augmented `Action` type, evocatively called
+```rust
+struct TempAction {
+    lit_filter: Vec<(usize, String)>,
+    var_filter: Vec<Vec<usize>>,
+    projection: Vec<Result<usize, String>>,
+}
+```
+The `projection` here can be either a column reference or a string literal.
+That's the only difference.
+The name actually a bit of a misnomer, as I hope to start using this everywhere, but I didn't want to have to update the optimization code, and all of the bugs I might introduce by changing it.
+
+The extended pre-execution planning swings through our e-nodes and has each `Op::Map` variant enqueue itself in a map keyed by the input on which it depends.
+It does something different for the body and the head, only the latter of which can introduce literals, and which we have ignored in our optimization.
+```rust
+// The head needs planning assistance from its atoms, wrt literals and repeats.
+let (body, head) = self.plan.split_at(self.plan.len() - self.rule.head.len());
+```
+With the head and body teased apart, we can enqueue the map actions by the identifier of the map input.
+```rust
+let mut steps = BTreeMap::<Id,Vec<(Id, TempAction)>>::default();
+
+// For all map actions in the body, place in the step they derive from.
+for (index, node) in body.iter().enumerate() {
+    if let Op::Map(action) = &node.op {
+        steps.entry(node.args[0])
+             .or_insert_with(Vec::new)
+             .push((index, TempAction::from_action(action)));
+    }
+}
+// For all map actions in the head, place in the step they derive from.
+for ((index, node), atom) in head.iter().enumerate().zip(self.rule.head.iter()) {
+    if let Op::Map(action) = &node.op {
+        steps.entry(node.args[0])
+             .or_insert_with(Vec::new)
+             .push((body.len() + index, TempAction::from_head(atom, action)));
+    }
+    else { panic!("Malformed plan; head atom is not a map!"); }
+}
+```
+
+The `steps` map now contains the actual steps we need to perform in the order we should perform them.
+What follows is a re-writing of our much, much earlier much, much more horrible logic for evaluating a bespoke join plan.
+It's a bit tidier, but if you don't want to read the whole thing, I understand.
+
+We'll start with the set-up: we'll still need names for each collection we materialize.
+Some of these names will be input names, some will be output names, and others will be entirely temporary.
+But names are how we access our `Facts` to get a concrete list of stable and recent facts, and to add candidate new facts.
+```rust
+let mut names = BTreeMap::<Id, String>::default();
+for (idx, actions) in steps {
+    let node = &self.plan[idx];
+    match &node.op {
+
+        unimplemented!()
+
+    }
+}
+```
+
+To show you just how serious about names we are, here is the logic for determining the right name to use just when we load data from an input, no joins:
+```rust
+    Op::Var(name) => {
+
+        let mut todos = Vec::default();
+        for (id, action) in actions.iter() {
+            // Head productions should write at their own name.
+            if *id >= body.len() {
+                names.insert(*id, self.rule.head[id-body.len()].name.clone());
+                todos.push((*id, action));
+            }
+            // Each action that is an identity can repeat the input name.
+            else if action.is_ident(*arities.get(name).unwrap()) {
+                names.insert(*id, name.clone());
+            }
+            // Each action that is not an identity will create a new name,
+            // and deposit the loading results behind that name.
+            else {
+                let new_name = format!(".temp-{}-{}", pos, id);
+                names.insert(*id, new_name);
+                todos.push((*id, action));
+            }
+        }
+```
+The three cases are 
+1. a head rule, which must write at its own name, 
+2. a no-op transformation that can re-use the existing name, and 
+3. a non-trivial non-head transform, which will need a temporary name.
+
+With names in hard, we load up the input facts, if we can find them, and apply all actions.
+We'll accumulate the result in a list of `FactBuilder` things appropriately called `builders`.
+```rust
+        if !todos.is_empty() {
+            let mut builders = vec![FactBuilder::default(); todos.len()];
+            if let Some(found) = facts.get(name) {
+                for layer in found.stable.contents().filter(|_| stable).chain(Some(&found.recent)) {
+                    for ((_id, action), builder) in todos.iter().zip(builders.iter_mut()) {
+                        for item in layer.borrow().into_index_iter() {
+                            let lit_match = action.lit_filter.iter().all(|(i,l)| item.get(*i).as_slice() == l.as_bytes());
+                            let var_match = action.var_filter.iter().all(|idxs| idxs.iter().all(|i| item.get(*i) == item.get(0)));
+                            if lit_match && var_match {
+                                builder.push(action.projection.iter().map(|i|
+                                    match i { Ok(col) => item.get(*col).as_slice(),
+                                                Err(lit) => lit.as_bytes() }));
+                            }
+                        }
+                    }
+                }
+            }
+```
+And finally, we commit each builder to its corresponding `FactSet`.
+```rust
+            for ((id, _action), builder) in todos.iter().zip(builders.into_iter()) {
+                let new_name = names.get(id).unwrap();
+                facts.entry(new_name.clone()).or_default().add_set(builder);
+            }
+```
+
+This was substantially longer in the original code, I think, because all of these cases were split apart and handled separately.
+The code is a bit shorter now; I won't say simpler.
+
+The join side of the house is a bit simpler.
+We'll need to pull some information about the inputs, their key arity and names and get references to their fact sets.
+```rust
+        Op::Mul(2) => {
+
+            // Peek at an input to see the intended join key arity.
+            let arity = if let Op::Map(action) = &self.plan[node.args[0]].op { action.key_arity } else { panic!("malformed plan") };
+
+            // Ensure collections exist, and then (borrow checker) fetch them.
+            facts.entry(names.get(&node.args[0]).unwrap().clone()).or_default();
+            facts.entry(names.get(&node.args[1]).unwrap().clone()).or_default();
+            let facts0 = facts.get(names.get(&node.args[0]).unwrap()).unwrap();
+            let facts1 = facts.get(names.get(&node.args[1]).unwrap()).unwrap();
+
+            let mut builders = vec![FactBuilder::default(); actions.len()];
+
+            join_with(facts0, facts1, stable, arity, |v1, v2| {
+                for ((_id, action), builder) in actions.iter().zip(builders.iter_mut()) {
+                    builder.push(action.projection.iter().map(|i| {
+                        match i { Ok(col) => if *col < v1.len() { v1.get(*col).as_slice() } else { v2.get(*col - v1.len()).as_slice() },
+                                    Err(lit) => lit.as_bytes() }}));
+                }
+            });
+
+            // Commit the results back to their `FactSet`s.
+            for ((id, _action), builder) in actions.iter().zip(builders.into_iter()) {
+                let name = if *id >= body.len() { self.rule.head[id-body.len()].name.clone() } else { format!(".temp-{}-{}", pos, id) };
+                facts.entry(name.clone()).or_default().add_set(builder);
+                names.insert(*id, name);
+            }
+        }
+```
+
+That's the whole thing!
+There's an additional `match` case where we complain if we see another instruction and panic because `Mul(2)` and `Map(_)` cannot be executed.
+
+I did have to add a new e-analysis that learned to remove `Mul(1)`, which were introduced by unary rules.
+I had a bunch of other bugs as well, but it runs on our complicated example.
+
+```
+> Fd(?val, ?loc) :- -d(?loc, ?val).
+114.284011209s
+
+> .list
+        -M:     92806768
+        -a:     362799
+        -d:     1147612
+        Fd:     1859886
+        MFd:    73474947
+        a:      362799
+        d:      1147612
+109.333µs
+
+> 
+```
+It's even five seconds faster, for no reason that I can explain.
+I haven't tried it on more complicated plans, for example more naively stated versions of this workload.
+Mostly, I'm scared and would prefer to make smoothing out the optimization into a background task I improve in spare time.
+Also, we never got around to teaching it about multi-rule optimization, which might require a re-think of how we approach planning.
+
+## Streamlining our fact representation
+
+**Teaser**: despite taking 50GB down to 5GB, we're still using about 10x more memory than we need to.
+Before we work to spill data to disk, let's at least make sure we aren't going to be spilling pure waste.
+We'll also need to look around for a harder problem, because doing spill-to-disk with less than 1GB feels a bit performative.
+
 ## Spilling facts to disk
+
+**Teaser**: our `columnar` stores that hold our facts are backed by relatively few but large allocations.
+When creating them we can write them to files instead of to memory, and then memory map the results back in and use them.
 
 ## Scaling rule evaluation out
 
+**Teaser**: Our joins, deduplication, and distinctness checks are all based on equality of keys.
+We can distribute the keys, and the data attached to those keys, across multiple workers.
+We even have the right library at hand to do this, and scale out to multiple processes (`timely_communication`).
+
 ## Streaming facts through rules
+
+**Teaser**: Our joins all use binary joins with materialized outputs.
+If the right indexes already exist, it's possible to use the multi-linearity of joins to create plans that materialize no internal state.
+I think this was where I was going to do worst-case-optimal joins also, for some reason.
 
 ## Specializing to compiled code
 
+**Teaser**: We'll dive deeper into the moments in our code that exist because we didn't have compile time access to something that `datafrog` did have.
+I'm cautiously optimistic that we can get a fair bit of that performance back, by noticing that our data is laid out the same way, and we just need to help Rust notice that some implementations are still ok.
+And if not, we'll learn something.
+
 ## Specializing to custom representations
 
+**Teaser**: I have a bee in my bonnet about detecting "transitive closure" computations and specializing them to the strongly connected component decomposition.
+You can do similar things with equivalence relations, which you can also read out of the rules themselves, and then use e.g. a union-find datastructure.
+I also thought we might discuss [`bddbddb`](https://people.csail.mit.edu/mcarbin/papers/aplas05.pdf), a database built around binary decision diagrams, which leads us to [factorized databases](https://www.cs.ox.ac.uk/dan.olteanu/papers/os-sigrec16.pdf) if we haven't already hit those yet.
+
 ## Searching for relevant facts
+
+The [demand transform](https://www3.cs.stonybrook.edu/~liu/papers/RuleQuery-PPDP10.pdf), which I still don't entirely 100% certainly understand.
+But we should understand it, because you want to use it if you are interactively exploring data with Datalog.
